--- a/rapport/titlepage.tex
+++ b/rapport/titlepage.tex
@@ -2,7 +2,7 @@
   \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
   \center
   \null{}
-  \vspace{3cm}
+  \vspace{1cm}
 
   \textsc{\LARGE ISIMA Première Année}\\[1.5cm]
   \textsc{\Large Projet}\\[1.5cm]
@@ -11,10 +11,11 @@
   \HRule \\[1.5cm]
 
   \begin{center}
-    \begin{tikzpicture}
-      \draw (-4,3) rectangle (4,-3);
-      \node at (0,0) {Image ici};
-    \end{tikzpicture}
+    \boxed{
+      \begin{tikzpicture}[scale=1]
+        \input{../tests/test_4/h1_graph}
+      \end{tikzpicture}
+    }
   \end{center}
   \vfill
 
