Ecriture de la partie calcul d'interception dans le rapport

--- a/rapport/conclusion.tex
+++ b/rapport/conclusion.tex
@@ -1,2 +1,4 @@
 \section{Intérêt de ce projet}
 \section{Propositions d'améliorations}
+
+On pourrait considérer que l'intercepteur se déplace à une vitesse variable (majorée par une vitesse max $v_1$) et chercher à trouver la vitesse $v$ qui nous permettrait d'intercepter un mobile plus rapidement.
