--- a/tests/test_1/h_comp.tex
+++ b/tests/test_1/h_comp.tex
@@ -2,6 +2,8 @@
 \foreach \x in {0,...,5}
   \draw (\x,1pt) -- (\x,-3pt) node[anchor=north] {\x};
 \draw (0,0) -- coordinate (y axis mid) (0,13.000000);
+\node[h0] at (1,7.500000) {$H_0$};
+\node[h1] at (1,5.500000) {$H_1$};
 \foreach \y in {0,1,...,13}
   \draw (1pt,\y) -- (-3pt,\y) node[anchor=east] {\y};
 \draw (2.500000,-2) node[anchor=north] {Nombre de mobiles interceptés};
