--- a/tests/test_3/h_comp.tex
+++ b/tests/test_3/h_comp.tex
@@ -2,6 +2,8 @@
 \foreach \x in {0,...,6}
   \draw (\x,1pt) -- (\x,-3pt) node[anchor=north] {\x};
 \draw (0,0) -- coordinate (y axis mid) (0,24.000000);
+\node[h0] at (1,13.000000) {$H_0$};
+\node[h1] at (1,11.000000) {$H_1$};
 \foreach \y in {0,2,...,24}
   \draw (1pt,\y) -- (-3pt,\y) node[anchor=east] {\y};
 \draw (3.000000,-2) node[anchor=north] {Nombre de mobiles interceptés};
