--- a/tests/test_4/h_comp.tex
+++ b/tests/test_4/h_comp.tex
@@ -2,6 +2,8 @@
 \foreach \x in {0,...,4}
   \draw (\x,1pt) -- (\x,-3pt) node[anchor=north] {\x};
 \draw (0,0) -- coordinate (y axis mid) (0,17.000000);
+\node[h0] at (1,9.500000) {$H_0$};
+\node[h1] at (1,7.500000) {$H_1$};
 \foreach \y in {0,2,...,17}
   \draw (1pt,\y) -- (-3pt,\y) node[anchor=east] {\y};
 \draw (2.000000,-2) node[anchor=north] {Nombre de mobiles interceptés};
