--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -47,3 +47,10 @@ Il nous faut intercepter autant de mobiles que possible en un temps minimal.
       	\caption{exemple\_graph.data}
       	\label{lst:exemple_graph}
   	\end{listing}
+
+  	Nous avons organisé notre code de la manière suivante:
+  	\begin{itemize}
+  		\item Un dossier \texttt{tests} contenant plusieurs sous-dossiers, chacun correspondant à l'un des 4 tests proposés ici,
+  		\item Un dossier \texttt{rapport} contenant toutes les sources du présent rapport,
+  		\item Un dossier \texttt{src} contenant tous les fichiers sources et le programme de compilation de l'exécutable final.
+  	\end{itemize}
