--- a/tests/test_4/h_comp.tex
+++ b/tests/test_4/h_comp.tex
@@ -1,14 +1,14 @@
+\draw[grided,step=1.0,thin] (0,0) grid (4,17.000000);
 \draw (0,0) -- coordinate (x axis mid) (4,0);
+\draw (0,0) -- coordinate (y axis mid) (0,17.000000);
 \foreach \x in {0,...,4}
   \draw (\x,1pt) -- (\x,-3pt) node[anchor=north] {\x};
-\draw (0,0) -- coordinate (y axis mid) (0,17.000000);
 \node[h0] at (1,9.500000) {$H_0$};
 \node[h1] at (1,7.500000) {$H_1$};
 \foreach \y in {0,2,...,17}
   \draw (1pt,\y) -- (-3pt,\y) node[anchor=east] {\y};
 \draw (2.000000,-2) node[anchor=north] {Nombre de mobiles interceptés};
 \draw (-0.75,8.500000) node[rotate=90,anchor=south] {Temps nécessaire (u.t)};
-\draw[grided,step=1.0,thin] (0,0) grid (4,17.000000);
 \node[h0] at (0,0) {\cross};
 \draw[h0] (0,0.000000) -- (1,1.097168);
 \node[h0] at(1,1.097168) {\cross};
@@ -19,6 +19,8 @@
 \draw[h0] (3,5.148816) -- (4,16.484408);
 \node[h0] at(4,16.484408) {\cross};
 \draw[grided,step=1.0,thin] (0,0) grid (4,8.000000);
+\draw (0,0) -- coordinate (x axis mid) (4,0);
+\draw (0,0) -- coordinate (y axis mid) (0,8.000000);
 \node[h1] at (0,0) {\cross};
 \draw[h1] (0,0.000000) -- (1,1.097168);
 \node[h1] at(1,1.097168) {\cross};
