Added ReadMe, updated report

--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -52,5 +52,7 @@ Il nous faut intercepter autant de mobiles que possible en un temps minimal.
   	\begin{itemize}
   		\item Un dossier \texttt{tests} contenant plusieurs sous-dossiers, chacun correspondant à l'un des 4 tests proposés ici,
   		\item Un dossier \texttt{rapport} contenant toutes les sources du présent rapport,
-  		\item Un dossier \texttt{src} contenant tous les fichiers sources et le programme de compilation de l'exécutable final.
+  		\item Un dossier \texttt{src} contenant tous les fichiers sources,
+        \item Un dossier \texttt{include} contenant toutes les déclarations de fonctions et de structures utilisées,
+        \item Un dossier \texttt{bin} dans lequel sera rangé l'exécutable final.
   	\end{itemize}
